--- a/Basics/index.html
+++ b/Basics/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Basic Exercise</title>
+    <title>Document</title>
   </head>
-  <body>
-    <h1>Javascript Exercise : Basics</h1>
-
-    <script src="index.js"></script>
-  </body>
+  <body></body>
 </html>
