--- a/Basics/index.html
+++ b/Basics/index.html
@@ -3,23 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Multiply-Divide</title>
+    <title>Document</title>
   </head>
   <body>
-    <form id="form">
-      <label for="firstNumber">1st Number :</label>
-      <input id="firstNumber" type="number" name="firstNumber" />
-      <br />
-      <label for="secondNumber">2nd Number:</label>
-      <input id="secondNumber" type="number" name="secondNumber" />
-      <br />
-      <button type="submit" value="multiply">Multiply</button>
-      <button type="submit" value="divide">Divide</button>
-    </form>
-
-    <p>The Result Is:</p>
-    <p id="result"></p>
-
     <script src="index.js"></script>
   </body>
 </html>
